--- a/groovy-runner/build.gradle
+++ b/groovy-runner/build.gradle
@@ -1,3 +1,5 @@
+apply from: "${rootProject.projectDir}/gradle/publishing.gradle"
+
 dependencies {
     compile project(':dependency-injection')
     compile 'junit:junit:4.11'
